--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
 
 /* NAV & LOGO COMPONENT */
 .nav {
-    width: 100%;
+    max-width: 100%;
     color: #ffffff;
     background-color: #333333;
     text-align: center;
@@ -44,7 +44,7 @@ body {
 
 .upload-btn {
   background-color: #e2e2e2;
-  width: 25%;
+  width: 425px;
   padding: 10px;
 }
 
@@ -137,9 +137,9 @@ input:checked + .slider {
   background-color: #f34444;
 }
 
-/* input:focus + .slider {
-  box-shadow: 0 0 1px #f34444;
-} */
+input:focus + .slider {
+  outline: 2px solid #f34444;
+}
 
 input:checked + .slider:before {
   -webkit-transform: translateX(26px);
@@ -165,3 +165,13 @@ input:checked + .slider:before {
   .toggler p {
     margin-right: 15px;
   }
+
+@media screen and (max-width: 400px) {
+  .upload-btn {
+    width: 75%;
+  }
+
+  .nav {
+    width: inherit;
+  }
+}
